--- a/notebooks/bc_features.ipynb
+++ b/notebooks/bc_features.ipynb
@@ -463,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -618,12 +618,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "d = OneLegStateDataset(\n",
-    "    dataset_path=\"demos_feature.zarr\",\n",
+    "    dataset_path=\"../demos.zarr\",\n",
     "    pred_horizon=20,\n",
     "    obs_horizon=2,\n",
     "    action_horizon=8,\n",
@@ -632,22 +632,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(8, 2062)"
+       "(8, 49)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "d.action_dim, d.obs_dim"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "((2, 49), (20, 8))"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "d[0][\"obs\"].shape, d[0][\"action\"].shape"
    ]
   },
   {
