--- a/src/data/process_real_demos.ipynb
+++ b/src/data/process_real_demos.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -21,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,18 +25,23 @@
     "\n",
     "import numpy as np\n",
     "import zarr\n",
-    "from tqdm import tqdm\n",
+    "from tqdm import tqdm, trange\n",
     "\n",
     "from pathlib import Path\n",
     "from furniture_bench.robot.robot_state import filter_and_concat_robot_state\n",
     "from furniture_bench.perception.image_utils import resize_crop\n",
     "\n",
-    "from vip import load_vip"
+    "from vip import load_vip\n",
+    "from src.models.vision import DinoEncoder\n",
+    "\n",
+    "import itertools\n",
+    "import math\n",
+    "from ipdb import set_trace as st"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,16 +141,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_features(img_batch):\n",
+    "def get_features(img_batch, encoder):\n",
     "    with torch.no_grad():\n",
     "        img_tensor = torch.tensor(\n",
-    "            img_batch, dtype=torch.float32, device=\"cuda:1\"\n",
+    "            img_batch, dtype=torch.float32, device=encoder.device\n",
     "        ).permute(0, 3, 1, 2)\n",
-    "        features = vip(img_tensor).cpu().numpy()\n",
+    "        features = encoder(img_tensor).cpu().numpy()\n",
     "    return features"
    ]
   },
@@ -229,6 +225,105 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Convert existing zarr image dataset to feature dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "input_file = Path(\n",
+    "    \"/home/larsankile/furniture-diffusion/data/processed/sim/image/low/one_leg/data.zarr\"\n",
+    ")\n",
+    "output_file = Path(\n",
+    "    \"/home/larsankile/furniture-diffusion/data/processed/sim/feature/dino/low/one_leg/data.zarr\"\n",
+    ")\n",
+    "\n",
+    "data = zarr.open(input_file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "encoder = DinoEncoder()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(45876, 45876, 45876)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(data[\"image1\"]), len(data[\"image2\"]), len(data[\"agent_pos\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/90 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 90/90 [18:55<00:00, 12.61s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch_size = 512\n",
+    "feat1_batches = []\n",
+    "feat2_batches = []\n",
+    "\n",
+    "for i in trange(0, len(data[\"image1\"]), batch_size):\n",
+    "    img1_features = get_features(data[\"image1\"][i : i + batch_size], encoder)\n",
+    "    img2_features = get_features(data[\"image2\"][i : i + batch_size], encoder)\n",
+    "\n",
+    "    feat1_batches.append(img1_features)\n",
+    "    feat2_batches.append(img2_features)\n",
+    "\n",
+    "feat1 = np.concatenate(feat1_batches, axis=0)\n",
+    "feat2 = np.concatenate(feat2_batches, axis=0)\n",
+    "\n",
+    "# Concatenate features with robot state\n",
+    "agent_pos = data[\"agent_pos\"][:]\n",
+    "observations = np.concatenate((agent_pos, feat1, feat2), axis=1)\n",
+    "\n",
+    "zarr.save(\n",
+    "    output_file,\n",
+    "    observations=observations,\n",
+    "    actions=data[\"actions\"][:],\n",
+    "    episode_ends=data[\"episode_ends\"][:],\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Extract and resize the images"
    ]
   },
@@ -262,12 +357,11 @@
     "actions = []\n",
     "episode_ends = []\n",
     "\n",
-    "end_index = 0\n",
     "\n",
     "for data in tqdm(raw_data):\n",
     "    img1_batch = []\n",
     "    img2_batch = []\n",
-    "    for obs, action in zip(data[\"observations\"], data[\"actions\"]):\n",
+    "    for agent_pos, image1, image2 in zip(data[\"observations\"], data[\"actions\"]):\n",
     "        robot_state = filter_and_concat_robot_state(obs[\"robot_state\"])\n",
     "        agent_pos.append(robot_state)\n",
     "\n",
