Redo the BC finetuning pipeline

--- a/notebooks/04_la_process_demos.ipynb
+++ b/notebooks/04_la_process_demos.ipynb
@@ -12,9 +12,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "unexpected EOF while parsing (vision.py, line 56)",
+     "output_type": "error",
+     "traceback": [
+      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
+      "\u001b[0m  File \u001b[1;32m~/miniconda3/envs/rlgpu/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3505\u001b[0m in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\u001b[0m\n",
+      "\u001b[0;36m  Cell \u001b[0;32mIn[4], line 25\u001b[0;36m\n\u001b[0;31m    from src.models.vision import DinoEncoder\u001b[0;36m\n",
+      "\u001b[0;36m  File \u001b[0;32m~/furniture-diffusion/src/models/vision.py:56\u001b[0;36m\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
+     ]
+    }
+   ],
    "source": [
     "import pickle\n",
     "from glob import glob\n",
@@ -25,14 +37,16 @@
     "\n",
     "import numpy as np\n",
     "import zarr\n",
+    "\n",
     "from tqdm import tqdm, trange\n",
+    "\n",
     "\n",
     "from pathlib import Path\n",
     "from furniture_bench.robot.robot_state import filter_and_concat_robot_state\n",
     "from furniture_bench.perception.image_utils import resize_crop\n",
     "\n",
     "from vip import load_vip\n",
-    "from src.models.vision import DinoEncoder\n",
+    "\n",
     "\n",
     "import itertools\n",
     "import math\n",
@@ -246,9 +260,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'DinoEncoder' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/larsankile/furniture-diffusion/notebooks/04_la_process_demos.ipynb Cell 14\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Banthony-gpu/home/larsankile/furniture-diffusion/notebooks/04_la_process_demos.ipynb#X16sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m encoder \u001b[39m=\u001b[39m DinoEncoder()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'DinoEncoder' is not defined"
+     ]
+    }
+   ],
    "source": [
     "encoder = DinoEncoder()"
    ]
