Fix many bugs with proc code

--- a/notebooks/04_la_process_demos.ipynb
+++ b/notebooks/04_la_process_demos.ipynb
@@ -12,21 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "unexpected EOF while parsing (vision.py, line 56)",
-     "output_type": "error",
-     "traceback": [
-      "Traceback \u001b[0;36m(most recent call last)\u001b[0m:\n",
-      "\u001b[0m  File \u001b[1;32m~/miniconda3/envs/rlgpu/lib/python3.8/site-packages/IPython/core/interactiveshell.py:3505\u001b[0m in \u001b[1;35mrun_code\u001b[0m\n    exec(code_obj, self.user_global_ns, self.user_ns)\u001b[0m\n",
-      "\u001b[0;36m  Cell \u001b[0;32mIn[4], line 25\u001b[0;36m\n\u001b[0;31m    from src.models.vision import DinoEncoder\u001b[0;36m\n",
-      "\u001b[0;36m  File \u001b[0;32m~/furniture-diffusion/src/models/vision.py:56\u001b[0;36m\u001b[0m\n\u001b[0;31m    \u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m unexpected EOF while parsing\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pickle\n",
     "from glob import glob\n",
@@ -46,11 +34,14 @@
     "from furniture_bench.perception.image_utils import resize_crop\n",
     "\n",
     "from vip import load_vip\n",
+    "from r3m import load_r3m\n",
     "\n",
     "\n",
     "import itertools\n",
     "import math\n",
-    "from ipdb import set_trace as st"
+    "from ipdb import set_trace as st\n",
+    "\n",
+    "from src.models.vision import R3MEncoder"
    ]
   },
   {
@@ -450,6 +441,47 @@
     "    actions=actions,\n",
     "    episode_ends=episode_ends,\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[autoreload of src.models.vision failed: Traceback (most recent call last):\n",
+      "  File \"/home/larsankile/miniconda3/envs/rlgpu/lib/python3.8/site-packages/IPython/extensions/autoreload.py\", line 273, in check\n",
+      "    superreload(m, reload, self.old_objects)\n",
+      "  File \"/home/larsankile/miniconda3/envs/rlgpu/lib/python3.8/site-packages/IPython/extensions/autoreload.py\", line 471, in superreload\n",
+      "    module = reload(module)\n",
+      "  File \"/home/larsankile/miniconda3/envs/rlgpu/lib/python3.8/importlib/__init__.py\", line 169, in reload\n",
+      "    _bootstrap._exec(spec, module)\n",
+      "  File \"<frozen importlib._bootstrap>\", line 604, in _exec\n",
+      "  File \"<frozen importlib._bootstrap_external>\", line 843, in exec_module\n",
+      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
+      "  File \"/home/larsankile/furniture-diffusion/src/models/vision.py\", line 4, in <module>\n",
+      "    from r3m import load_r3m\n",
+      "ImportError: cannot import name 'load_r3m' from 'r3m' (unknown location)\n",
+      "]\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'load_r3m' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/larsankile/furniture-diffusion/notebooks/04_la_process_demos.ipynb Cell 21\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Banthony-gpu/home/larsankile/furniture-diffusion/notebooks/04_la_process_demos.ipynb#X26sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m enc \u001b[39m=\u001b[39m load_r3m(modelid\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mresnet50\u001b[39m\u001b[39m\"\u001b[39m, device\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcuda:1\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39mmodule\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'load_r3m' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "enc = load_r3m(modelid=\"resnet50\", device=\"cuda:1\").module"
    ]
   },
   {
