--- a/notebooks/04_la_process_demos.ipynb
+++ b/notebooks/04_la_process_demos.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -445,43 +445,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "[autoreload of src.models.vision failed: Traceback (most recent call last):\n",
-      "  File \"/home/larsankile/miniconda3/envs/rlgpu/lib/python3.8/site-packages/IPython/extensions/autoreload.py\", line 273, in check\n",
-      "    superreload(m, reload, self.old_objects)\n",
-      "  File \"/home/larsankile/miniconda3/envs/rlgpu/lib/python3.8/site-packages/IPython/extensions/autoreload.py\", line 471, in superreload\n",
-      "    module = reload(module)\n",
-      "  File \"/home/larsankile/miniconda3/envs/rlgpu/lib/python3.8/importlib/__init__.py\", line 169, in reload\n",
-      "    _bootstrap._exec(spec, module)\n",
-      "  File \"<frozen importlib._bootstrap>\", line 604, in _exec\n",
-      "  File \"<frozen importlib._bootstrap_external>\", line 843, in exec_module\n",
-      "  File \"<frozen importlib._bootstrap>\", line 219, in _call_with_frames_removed\n",
-      "  File \"/home/larsankile/furniture-diffusion/src/models/vision.py\", line 4, in <module>\n",
-      "    from r3m import load_r3m\n",
-      "ImportError: cannot import name 'load_r3m' from 'r3m' (unknown location)\n",
-      "]\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'load_r3m' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/larsankile/furniture-diffusion/notebooks/04_la_process_demos.ipynb Cell 21\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Banthony-gpu/home/larsankile/furniture-diffusion/notebooks/04_la_process_demos.ipynb#X26sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m enc \u001b[39m=\u001b[39m load_r3m(modelid\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mresnet50\u001b[39m\u001b[39m\"\u001b[39m, device\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mcuda:1\u001b[39m\u001b[39m\"\u001b[39m)\u001b[39m.\u001b[39mmodule\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'load_r3m' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "'cuda:1'"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "enc = load_r3m(modelid=\"resnet50\", device=\"cuda:1\").module"
+    "enc = R3MEncoder(device=\"cuda:1\")\n",
+    "\n",
+    "enc.device"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([1, 2048])"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "enc(torch.randn(1, 224, 224, 3).cuda(1)).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2048"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Get embedding dim\n",
+    "enc.encoding_dim"
    ]
   },
   {
