Iterate on the lightning training

--- a/notebooks/04_la_process_demos.ipynb
+++ b/notebooks/04_la_process_demos.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +22,7 @@
     "from collections import Counter\n",
     "import torch\n",
     "import tarfile\n",
+    "import os\n",
     "\n",
     "import numpy as np\n",
     "import zarr\n",
@@ -511,7 +512,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Make a smaller version of the dataset for testing\n",
+    "orignal_file = Path(os.environ['FURNITURE_DATA_DIR']) / \"processed\" / \"sim\" / \"image\" / \"one_leg\" / \"high\" / \"data.zarr\""
+   ]
   }
  ],
  "metadata": {
