--- a/notebooks/08_la_debug_rollout_imgs.ipynb
+++ b/notebooks/08_la_debug_rollout_imgs.ipynb
@@ -19,8 +19,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Importing module 'gym_38' (/home/larsankile/isaacgym/python/isaacgym/_bindings/linux-x86_64/gym_38.so)\n",
-      "Setting GYM_USD_PLUG_INFO_PATH to /home/larsankile/isaacgym/python/isaacgym/_bindings/linux-x86_64/usd/plugInfo.json\n"
+      "Importing module 'gym_38' (/data/scratch/ankile/isaacgym/python/isaacgym/_bindings/linux-x86_64/gym_38.so)\n",
+      "Setting GYM_USD_PLUG_INFO_PATH to /data/scratch/ankile/isaacgym/python/isaacgym/_bindings/linux-x86_64/usd/plugInfo.json\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/data/scratch/ankile/miniconda3/envs/rlgpu/lib/python3.8/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
      ]
     }
    ],
@@ -84,7 +92,7 @@
     "        observation_type=\"feature\",\n",
     "        demo_source=\"sim\",\n",
     "        vision_encoder=\"dinov2-base\",\n",
-    "        num_envs=8,\n",
+    "        num_envs=1,\n",
     "        rollout_max_steps=20,\n",
     "        n_rollouts=2,\n",
     "    )\n",
@@ -102,15 +110,15 @@
      "text": [
       "PyTorch version 2.0.1+cu117\n",
       "Device count 2\n",
-      "/home/larsankile/isaacgym/python/isaacgym/_bindings/src/gymtorch\n"
+      "/data/scratch/ankile/isaacgym/python/isaacgym/_bindings/src/gymtorch\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Using /home/larsankile/.cache/torch_extensions/py38_cu117 as PyTorch extensions root...\n",
-      "Emitting ninja build file /home/larsankile/.cache/torch_extensions/py38_cu117/gymtorch/build.ninja...\n",
+      "Using /afs/csail.mit.edu/u/a/ankile/.cache/torch_extensions/py38_cu117 as PyTorch extensions root...\n",
+      "Emitting ninja build file /afs/csail.mit.edu/u/a/ankile/.cache/torch_extensions/py38_cu117/gymtorch/build.ninja...\n",
       "Building extension module gymtorch...\n",
       "Allowing ninja to set a default number of workers... (overridable by setting the environment variable MAX_JOBS=N)\n"
      ]
@@ -138,24 +146,24 @@
       "Physics Engine: PhysX\n",
       "Physics Device: cuda:0\n",
       "GPU Pipeline: enabled\n",
-      "Using SDF cache directory '/home/larsankile/.isaacgym/sdf_V100'\n",
-      "~!~!~! Loaded/Cooked SDF triangle mesh 0 @ 0x84e80f30, resolution=512, spacing=0.000317\n",
+      "Using SDF cache directory '/afs/csail.mit.edu/u/a/ankile/.isaacgym/sdf_V100'\n",
+      "~!~!~! Loaded/Cooked SDF triangle mesh 0 @ 0x7f275ce69390, resolution=512, spacing=0.000317\n",
       "  ~!~! Bounds:  (-0.081250, 0.081250) (-0.015685, 0.015565) (-0.081250, 0.081251)\n",
       "  ~!~! Extents: (0.162500, 0.031250, 0.162501)\n",
       "  ~!~! Resolution: (512, 99, 512)\n",
-      "~!~!~! Loaded/Cooked SDF triangle mesh 1 @ 0x8567dc70, resolution=512, spacing=0.000171\n",
+      "~!~!~! Loaded/Cooked SDF triangle mesh 1 @ 0x7f275ce66f30, resolution=512, spacing=0.000171\n",
       "  ~!~! Bounds:  (-0.015000, 0.015000) (-0.056250, 0.031250) (-0.014383, 0.015618)\n",
       "  ~!~! Extents: (0.030000, 0.087500, 0.030001)\n",
       "  ~!~! Resolution: (176, 512, 176)\n",
-      "~!~!~! Loaded/Cooked SDF triangle mesh 2 @ 0x86629420, resolution=512, spacing=0.000172\n",
+      "~!~!~! Loaded/Cooked SDF triangle mesh 2 @ 0x7f275c65c520, resolution=512, spacing=0.000172\n",
       "  ~!~! Bounds:  (-0.015000, 0.015000) (-0.056562, 0.031376) (-0.015438, 0.014563)\n",
       "  ~!~! Extents: (0.030000, 0.087938, 0.030001)\n",
       "  ~!~! Resolution: (175, 512, 175)\n",
-      "~!~!~! Loaded/Cooked SDF triangle mesh 3 @ 0x86cd2ae0, resolution=512, spacing=0.000171\n",
+      "~!~!~! Loaded/Cooked SDF triangle mesh 3 @ 0x7f25d7e782c0, resolution=512, spacing=0.000171\n",
       "  ~!~! Bounds:  (-0.015000, 0.015000) (-0.056250, 0.031250) (-0.014375, 0.015625)\n",
       "  ~!~! Extents: (0.030000, 0.087500, 0.030000)\n",
       "  ~!~! Resolution: (176, 512, 176)\n",
-      "~!~!~! Loaded/Cooked SDF triangle mesh 4 @ 0x88349130, resolution=512, spacing=0.000171\n",
+      "~!~!~! Loaded/Cooked SDF triangle mesh 4 @ 0x7f25d7e5f9e0, resolution=512, spacing=0.000171\n",
       "  ~!~! Bounds:  (-0.015000, 0.015000) (-0.056250, 0.031250) (-0.015618, 0.014383)\n",
       "  ~!~! Extents: (0.030000, 0.087500, 0.030001)\n",
       "  ~!~! Resolution: (176, 512, 176)\n"
@@ -174,15 +182,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check obs and action space limits"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "dataset = FurnitureImageDataset(\n",
-    "    dataset_path=f\"../data/processed/sim/image/one_leg/high/data.zarr\",\n",
+    "    dataset_path=f\"/data/scratch/ankile/furniture-data/data/processed/sim/image/one_leg/high/data.zarr\",\n",
     "    pred_horizon=config.pred_horizon,\n",
     "    obs_horizon=config.obs_horizon,\n",
     "    action_horizon=config.action_horizon,\n",
+    "    data_subset=10,\n",
     ")\n",
     "\n",
     "config.action_dim = dataset.action_dim"
@@ -737,15 +755,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "number of parameters: 9.498215e+07\n"
+      "Total parameters: 1.16e+08\n",
+      "encoder1: 2.13e+07 parameters\n",
+      "model: 9.50e+07 parameters\n"
      ]
     }
    ],
    "source": [
-    "config.action_dim = dataset.action_dim\n",
-    "config.robot_state_dim = dataset.robot_state_dim\n",
+    "# config.action_dim = dataset.action_dim\n",
+    "# config.robot_state_dim = dataset.robot_state_dim\n",
+    "config.action_dim = 8\n",
+    "config.robot_state_dim = 14\n",
     "\n",
-    "act = DoubleImageActor(\"cuda\", \"resnet18\", config, dataset.stats)"
+    "act = DoubleImageActor(\n",
+    "    device=\"cpu\",\n",
+    "    encoder_name=\"r3m_34\",\n",
+    "    freeze_encoder=True,\n",
+    "    config=config,\n",
+    "    # stats=dataset.stats,\n",
+    "    stats={},\n",
+    ")"
    ]
   },
   {
