Some progress in debugging quest

--- a/notebooks/08_la_debug_rollout_imgs.ipynb
+++ b/notebooks/08_la_debug_rollout_imgs.ipynb
@@ -182,11 +182,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Box([-inf -inf -inf -inf -inf -inf -inf -inf -inf -inf -inf -inf -inf -inf], [inf inf inf inf inf inf inf inf inf inf inf inf inf inf], (14,), float32)\n",
+      "Box([[-1. -1. -1. -1. -1. -1. -1. -1.]], [[1. 1. 1. 1. 1. 1. 1. 1.]], (1, 8), float32)\n"
+     ]
+    }
+   ],
    "source": [
-    "# Check obs and action space limits"
+    "# Check obs and action space limits\n",
+    "print(env.observation_space[\"robot_state\"])\n",
+    "print(env.action_space)"
    ]
   },
   {
