Getting results more similar to before

--- a/notebooks/10_la_investigate_data.ipynb
+++ b/notebooks/10_la_investigate_data.ipynb
@@ -781,37 +781,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'zarr' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/data/scratch/ankile/furniture-diffusion/notebooks/10_la_investigate_data.ipynb Cell 36\u001b[0m line \u001b[0;36m1\n\u001b[0;32m----> <a href='vscode-notebook-cell://ssh-remote%2Bimprobablex003.csail.mit.edu/data/scratch/ankile/furniture-diffusion/notebooks/10_la_investigate_data.ipynb#X50sdnNjb2RlLXJlbW90ZQ%3D%3D?line=0'>1</a>\u001b[0m vips \u001b[39m=\u001b[39m zarr\u001b[39m.\u001b[39mopen(\u001b[39m\"\u001b[39m\u001b[39m/data/scratch/ankile/furniture-data/data/processed/sim/feature/r3m_18/one_leg/low/data.zarr\u001b[39m\u001b[39m\"\u001b[39m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'zarr' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "vips = zarr.open(\"/data/scratch/ankile/furniture-data/data/processed/sim/feature_separate/vip/one_leg/data.zarr\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "101302"
+       "248151"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -822,16 +810,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "actions 101780\n",
-      "episode_ends 99\n",
-      "observations 101376\n"
+      "action 248151\n",
+      "episode_ends 490\n",
+      "feature1 248151\n",
+      "feature2 248151\n",
+      "furniture 490\n",
+      "rewards 248151\n",
+      "robot_state 248151\n",
+      "skills 248151\n"
      ]
     },
     {
